DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
[1.0 Beta 3 released - 6.7.2005]===============================================
Jun-07-2005 patrickh    NEW VERSION: 0.93.0

[1.0 Beta 2 released - 1.18.2005]==============================================
Jan-18-2005 patrickh    NEW VERSION: 0.92.0

[1.0 Beta 1 released - 12.24.2004]=============================================
Dec-23-2004 patrickh    NEW VERSION: 0.91.0
Nov-18-2004 patrickh    Moved the sonix class into the snx namespace.  Renamed
                        the namespaces snxEndian and snxFileIO to snx::Endian
                        and snx::FileIO.
                        NEW VERSION: 0.5.0
Nov-17-2004 patrickh    Fixed potential problems with polymorphic Sonix types
                        not being compiled into the sonix library correctly.
                        NEW VERSION: 0.4.1
Apr-11-2004 patrickh    Sonix now depends on an installed version of GMTL.
Dec-01-2003 patrickh    Removed the deletePlugin() function from the required
                        list of entry points a Sonix plug-in must implement.
                        Now, snx::ISoundImplementation defines a pure virtual
                        destroy() method that must be implemented.
                        NEW VERSION: 0.3.0
Nov-29-2003 chooze      Removed XDL in favor of using vpr::Library.
                        NEW VERSION: 0.3.0
Nov-27-2003 patrickh    Moved the plug-in code from snx/plugins into plugins
                        and gave the plug-ins their own build system.
Nov-27-2003 patrickh    Rewrote the build system.
Jul-24-2003 browner     Added the audiere plugin.  this required the
                        modification of the SoundInfo struct for a streaming
                        flag - which means we now support streaming apis
                        NEW VERSION: 0.2.2
Oct-25-2002 patrickh    Replaced use of snx::Singleton<T> with the thread-safe