@@ -1,3 +1,4 @@
+0.93.1-0 @06/15/2005 14:30:00 UTC@
 0.93.0-0 @06/07/2005 02:35:00 UTC@
 0.92.0-0 @01/18/2005 16:05:00 UTC@
 0.91.0-0 @12/23/2004 22:40:00 UTC@
