@@ -1,5 +1,5 @@
-#ifdef WIN32
-    #include <windows.h>
+#if defined(WIN32) || defined(WIN64)
+#  include <windows.h>
 #endif
 #include <GL/gl.h>    // OpenGL
 
