@@ -278,10 +278,10 @@ public:
 
    virtual std::string& name() = 0;
 
-#ifdef VPR_OS_Win32
+#ifdef VPR_OS_Windows
    /**
     * Overlaod delete so that we can delete our memory correctly.  This is
-    * necessary for DLLs on Win32 to release memory from the correct memory
+    * necessary for DLLs on Windows to release memory from the correct memory
     * space.  All subclasses must overload delete similarly.
     */
    void operator delete(void* p)
